--- a/estilos/actividades.css
+++ b/estilos/actividades.css
@@ -1,151 +1,105 @@
-body{
-    text-align: center;
-    font-family: Arial, Helvetica, sans-serif;
-    
+body {
+  text-align: center;
+  font-family: Arial, Helvetica, sans-serif;
+  background-color: white;
+  color: black;
+  transition: background-color 0.3s, color 0.3s;
 }
 
-.cards{
+.edadAutor {
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  font-weight: bold;
+  text-align: center;
+  font-size: 1.2em;
+  color: var(--white);
+  gap: 10px;
+  font-weight: bold;
+}
+
+.edadAutor p::after {
+  content: " | ";
+}
+.share {
+  background-color: white;
+  border-radius: 5px;
+  height: 144px;
+}
+
+.div1,
+.div2,
+.div3 {
+  padding: 10px;
+}
+
+.div1_title,
+.div2_title,
+.div3_title {
+  text-transform: uppercase;
+  font-weight: bold;
+}
+
+.cards {
   display: flex;
   justify-content: center;
   align-items: center;
   gap: 30px;
+  flex-wrap: wrap;
 }
 
 .card {
-    max-width: 20em;
-    background: var(--blue);
-    clip-path: polygon(30px 0%, 100% 0, 100% calc(100% - 30px), calc(100% - 30px) 100%, 0 100%, 0% 30px);
-    border-top-right-radius: 20px;
-    border-bottom-left-radius: 20px;
-    display: flex;
-    flex-direction: column;
-    padding: 30px 20px;
-  }
-  
-  .card span {
-    font-weight: bold;
-    color: rgb(8, 8, 8);
-    text-align: center;
-    display: block;
-    font-size: 1.4em;
-    color: var(--white);
-    padding-top: 30px;
-  }
-  
-  .card .info {
-    font-weight: 400;
-    color: rgb(0, 0, 0);
-    display: block;
-    text-align: center;
-    font-size: 1.4rem;
-    margin: 1em;
-    min-height: 300px;
-    color: var(--white);
-  }
-  
-  .card .img {
-    width: 8em;
-    height: 8em;
-    background: rgb(0, 0, 0);
-    overflow: hidden;
-    border-radius: 100%;
-    margin: auto;
-    object-position: center;
-    object-fit: cover;
-  }
-  
-  .card .share {
-    margin-top: 1em;
-    display: flex;
-    justify-content: center;
-    gap: 1em;
-  }
+  max-width: 20em;
+  max-height: max-content;
+  height: 45rem;
+  background: var(--blue);
+  clip-path: polygon(
+    30px 0%,
+    100% 0,
+    100% calc(100% - 30px),
+    calc(100% - 30px) 100%,
+    0 100%,
+    0% 30px
+  );
+  border-top-right-radius: 20px;
+  border-bottom-left-radius: 20px;
+  display: flex;
+  flex-direction: column;
+  padding: 30px 20px;
+}
 
-  
-#botonLike, #botonLike2,#botonLike3 {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding:    5px 10px 5px 10px;
-    box-shadow: rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
-    background-color: #ffffff;
-    border-radius: 95px;
-    font-size: 25px;
-    cursor: pointer;
-    font-weight: 750;
-    color: rgb(0, 0, 0);
-    font-family: sans-serif;
-    transition:
-      transform 400ms cubic-bezier(0.68, -0.55, 0.27, 2.5),
-      border-color 400ms ease-in-out,
-      background-color 400ms ease-in-out;
-    word-spacing: -2px;
-  }
-  
-  @keyframes movingBorders {
-    0% {
-      border-color: #fce4e4;
-    }
-  
-    50% {
-      border-color: #ffd8d8;
-    }
-  
-    90% {
-      border-color: #fce4e4;
-    }
-  }
-  
-  button:hover {
-    transform: scale(105%);
-    animation: movingBorders 3s infinite;
-  }
-  
-  
-  
-  @keyframes beatingHeart {
-    0% {
-      transform: scale(1);
-    }
-  
-    15% {
-      transform: scale(1.15);
-    }
-  
-    30% {
-      transform: scale(1);
-    }
-  
-    45% {
-      transform: scale(1.15);
-    }
-  
-    60% {
-      transform: scale(1);
-    }
-  }
+.card .info {
+  font-weight: 400;
+  color: rgb(0, 0, 0);
+  display: block;
+  text-align: center;
+  font-size: 1.2rem;
+  margin: 1em;
+  min-height: 300px;
+  color: var(--white);
+}
 
-  .botonLike:hover .butonLikeIcon{
-    fill: red;
-  }
+.card .img {
+  width: 8em;
+  height: 8em;
+  background: rgb(0, 0, 0);
+  overflow: hidden;
+  border-radius: 100%;
+  margin: auto;
+  object-position: center;
+  object-fit: cover;
+}
+
+.card .share {
+  margin-top: 1em;
+  display: flex;
+  justify-content: center;
+  gap: 1em;
+}
 
 :root {
-    --blue: #01337f;
-    --blue2: #024bb9;
-    --white: #fff;
-  }
-
-  header {
-    background-image: url("/IMGS/Header.jpg");
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    display: flex;
-  }
-  
-  header {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    min-height: 450px;
-    position: relative;
-  }
+  --blue: #01337f;
+  --blue2: #024bb9;
+  --white: #fff;
+  --black: #000;
+}
