--- a/estilos/expositores.css
+++ b/estilos/expositores.css
@@ -13,20 +13,18 @@ body {
 }
 
 .Expositores {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  display: flex;
+  justify-content: center;
   align-items: center;
-  justify-items: center;
-  width: 70%;
-  margin: auto;
   gap: 30px;
+  flex-wrap: wrap;
 }
 
 .expositor {
-  border-radius: 20px;
-  padding: 30px;
-  background-color: var(--blue);
-  color: var(--white);
+  max-width: 20em;
+  max-height: max-content;
+  height: 45rem;
+  background: var(--blue);
   clip-path: polygon(
     30px 0%,
     100% 0,
@@ -37,14 +35,20 @@ body {
   );
   border-top-right-radius: 20px;
   border-bottom-left-radius: 20px;
+  flex-direction: column;
+  padding: 30px 20px;
+  color: var(--white);
 }
 
 .expositor_img {
-  width: 10rem;
-  height: 10rem;
+  width: 8em;
+  height: 8em;
+  background: rgb(0, 0, 0);
+  overflow: hidden;
   border-radius: 100%;
-  object-fit: cover;
+  margin: auto;
   object-position: center;
+  object-fit: cover;
 }
 
 .info {
@@ -53,7 +57,7 @@ body {
   align-items: center;
   gap: 10px;
   font-weight: bold;
-  font-size: 1.8rem;
+  font-size: 1.2rem;
 }
 
 .info_nombre:after {
@@ -64,17 +68,18 @@ body {
 .informacion_p1,
 .descripcion_p-1 {
   font-weight: bold;
-  font-size: 1.8rem;
+  font-size: 1.2rem;
   line-height: 0;
   text-decoration: underline;
 }
 
 .informacion_p2 {
-  font-size: 1.4rem;
+  font-size: 1.2rem;
   color: var(--gray);
 }
 
 .descripcion_p-2 {
   font-size: 1.2rem;
   color: var(--gray);
+  text-align: left;
 }
