--- a/estilos/faq.css
+++ b/estilos/faq.css
@@ -23,7 +23,7 @@ header {
   position: relative;
 }
 
-.FAQs{
+.FAQs {
   display: flex;
   flex-direction: column;
   text-align: left;
@@ -31,25 +31,31 @@ header {
   margin-left: 50px;
 }
 
-.FAQ summary{
+.FAQ summary {
   font-weight: bold;
 }
 
-.FAQ{
-  font-size: 1.4rem;
+.FAQ {
+  font-size: 1.2rem;
 }
 
-.FAQ-p{
+.FAQ-p {
   font-size: 1.2rem;
   max-width: 80%;
 }
 
-details{
+details {
   cursor: pointer;
 }
 
-footer{
+footer {
   position: absolute;
   width: 100%;
   bottom: 0;
+}
+
+@media screen and (max-width: 768px) {
+  footer {
+    position: static;
+  }
 }
